_sass/_main.scss
/* ... */
.newer-posts,
.older-posts {
    color: $white;
    position: absolute !important;
    top: 0;
}

.newer-posts {
    left: 0;
}

.older-posts {
    right: 0;
}

.post + .post-navigation {
    margin-top: -20px;
}

.post-navigation .nav-next,
.post-navigation .nav-previous {
    background-color: $tundora;
    border-left: 3px solid $picton-blue; 
    margin-bottom: 20px;
    padding-bottom: 50px;
    padding-top: 30px;
    position: relative;
}

.post-navigation .nav-thumb {
    background-position: center;
    background-size: cover;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    width: 260px;
}

.post-navigation .nav-title {
    font-size: 20px;
    font-weight: bold;
    line-height: 1.16667;
    margin-bottom: 5px;
    margin-right: 240px;
}

.post-navigation .nav-title a {
    color: $white;
    text-decoration: none;
}

.post-navigation .nav-title a:hover {
    color: $picton-blue;
}

.post-navigation .nav-before,
.post-navigation .nav-date {
    font-size: 12px;
    letter-spacing: 1px;
    margin-right: 240px;
    text-transform: uppercase;
    color: $post-navigation-date;
}

.post-navigation .nav-before {
    color: $silver;
    margin-bottom: 15px;
}

/**
 * 4. Site Footer
 * ----------------------------------------------------------------------------
 */

.site-footer {
    background-color: lighten( $mine-shaft, 4% );
}

.site-footer .inner {
    position: relative;
}

.social-links {
    border-bottom: 2px solid $tundora;
    padding-bottom: 60px;
    padding-right: 90px;
    padding-top: 60px;
    @media (max-width: $small-screen-breakpoint) {
        text-align: center;
    }
}

.social-links a {
    float: left;
    margin: 6px 3px 3px 0;
    @media (max-width: $small-screen-breakpoint) {
        float: none;
    }
}

.site-info {
    color: #666;
    font-size: 12px;
    letter-spacing: 1px;
    line-height: 1.5;
    padding-bottom: 60px;
    padding-right: 90px;
    padding-top: 40px;
    text-transform: uppercase;
}

.social-links + .site-info {
    padding-right: 0;
}

.top-link {
    cursor: pointer;
}

.site-info .top-link {
    color: $white;
    font-size: 14px;
    margin: 0;
    position: absolute;
    right: 0;
    top: 40px;
}

.social-links + .site-info .top-link {
    top: 60px;
}

.site-info a {
    text-decoration: none;
}

/**
 * 5. Widgets
 * ----------------------------------------------------------------------------
 */

.widget {
    border-top: 2px solid $tundora;
    margin-bottom: 40px;
    padding-top: 30px;
}

.widget:first-child {
    border-top: 0;
    padding-top: 0;
    @media only screen and (min-width: $small-screen-breakpoint) {
        height: 450px;
    }
}

.widget-title {
    color: $silver;
    font-size: 14px;
    letter-spacing: 1px;
    text-transform: uppercase; 
}

.widget input[type="text"],
.widget input[type="email"],
.widget input[type="url"],
.widget input[type="password"],
.widget input[type="search"],
.widget select,
.widget textarea {
    border: 0;
    font-size: 14px;
    width: 100%;
}

.widget button,
.widget input[type="submit"],
.widget input[type="button"],
.widget input[type="reset"] {
    padding-bottom: 9px;
    padding-top: 9px;
}

.widget-recent-posts ul {
    list-style: none;
    padding: 0;
}

.widget-recent-posts li {
    margin-bottom: 12px;
    line-height: 1.5;
}

.widget-recent-posts a {
    color: $white;
    text-decoration: none;
}

.widget-recent-posts a:hover {
    color: $picton-blue;
}

.widget-recent-posts span {
    color: #818181;
    display: block;
    font-size: 12px;
    letter-spacing: 1px;
    line-height: 1.5;
    text-transform: uppercase;
}

.widget-tags a {
    background-color: $tundora;
    color: $silver;
    display: inline-block;
    font-size: 10px;
    letter-spacing: 1px;
    margin: 0 4px 8px 0;
    padding: 6px 8px;    
    text-decoration: none;
    text-transform: uppercase;
    -webkit-transition: all 0.3s;
    -moz-transition:    all 0.3s;
    transition:         all 0.3s;
}

.widget-tags a:hover {
    background-color: $picton-blue;
    color: $white;
}

.widget-newsletter label {
    display: block;
    margin-bottom: 15px;
}

.widget-newsletter input[type="email"] {
    display: block;
    margin-bottom: 15px;
}

/**
 * 6. Media Queries
 * ----------------------------------------------------------------------------
 */

@media only screen and (max-width: 1260px) {
    .full-width {
        margin-left: 0;
        margin-right: 0;
    }
}

@media only screen and (max-width: 960px) {
    .sidebar,
    .site-main {
        float: none;
        margin-bottom: 60px;
        width: auto;
    }

    .post,
    .author-box,
    .comments-area,
    .pagination,
    .post-navigation {
        margin-bottom: 30px;
    }

    .post + .author-box,
    .post + .post-navigation {
        margin-top: -10px;
    }

    .widget {
        text-align: center;
    }

    .widget-title:after {
        content: " —";
    }

    .widget form {
        margin-left: auto;
        margin-right: auto;
        max-width: 500px;
    }
	
}
/* ... */

